Package_Tools/include-C/leptonica/inarbeit/fertig/allheaders.h

 extern BOXA * pixConnCompBB ( PIX *pixs, l_int32 connectivity );
 extern l_ok pixCountConnComp ( PIX *pixs, l_int32 connectivity, l_int32 *pcount );
 extern l_int32 nextOnPixelInRaster ( PIX *pixs, l_int32 xstart, l_int32 ystart, l_int32 *px, l_int32 *py );
 extern BOX * pixSeedfillBB ( PIX *pixs, L_STACK *stack, l_int32 x, l_int32 y, l_int32 connectivity );
 extern BOX * pixSeedfill4BB ( PIX *pixs, L_STACK *stack, l_int32 x, l_int32 y );
 extern BOX * pixSeedfill8BB ( PIX *pixs, L_STACK *stack, l_int32 x, l_int32 y );
 extern l_ok pixSeedfill ( PIX *pixs, L_STACK *stack, l_int32 x, l_int32 y, l_int32 connectivity );
 extern l_ok pixSeedfill4 ( PIX *pixs, L_STACK *stack, l_int32 x, l_int32 y );
 extern l_ok pixSeedfill8 ( PIX *pixs, L_STACK *stack, l_int32 x, l_int32 y );
 extern l_ok convertFilesTo1bpp ( const char *dirin, const char *substr, l_int32 upscaling, l_int32 thresh, l_int32 firstpage, l_int32 npages, const char *dirout, l_int32 outformat );
 extern PIX * pixBlockconv ( PIX *pix, l_int32 wc, l_int32 hc );
 extern PIX * pixBlockconvGray ( PIX *pixs, PIX *pixacc, l_int32 wc, l_int32 hc );
 extern PIX * pixBlockconvAccum ( PIX *pixs );
 extern PIX * pixBlockconvGrayUnnormalized ( PIX *pixs, l_int32 wc, l_int32 hc );
 extern PIX * pixBlockconvTiled ( PIX *pix, l_int32 wc, l_int32 hc, l_int32 nx, l_int32 ny );
 extern PIX * pixBlockconvGrayTile ( PIX *pixs, PIX *pixacc, l_int32 wc, l_int32 hc );
 extern l_ok pixWindowedStats ( PIX *pixs, l_int32 wc, l_int32 hc, l_int32 hasborder, PIX **ppixm, PIX **ppixms, FPIX **pfpixv, FPIX **pfpixrv );
 extern PIX * pixWindowedMean ( PIX *pixs, l_int32 wc, l_int32 hc, l_int32 hasborder, l_int32 normflag );
 extern PIX * pixWindowedMeanSquare ( PIX *pixs, l_int32 wc, l_int32 hc, l_int32 hasborder );
 extern l_ok pixWindowedVariance ( PIX *pixm, PIX *pixms, FPIX **pfpixv, FPIX **pfpixrv );
 extern DPIX * pixMeanSquareAccum ( PIX *pixs );
 extern PIX * pixBlockrank ( PIX *pixs, PIX *pixacc, l_int32 wc, l_int32 hc, l_float32 rank );
 extern PIX * pixBlocksum ( PIX *pixs, PIX *pixacc, l_int32 wc, l_int32 hc );
 extern PIX * pixCensusTransform ( PIX *pixs, l_int32 halfsize, PIX *pixacc );
 extern PIX * pixConvolve ( PIX *pixs, L_KERNEL *kel, l_int32 outdepth, l_int32 normflag );
 extern PIX * pixConvolveSep ( PIX *pixs, L_KERNEL *kelx, L_KERNEL *kely, l_int32 outdepth, l_int32 normflag );
 extern PIX * pixConvolveRGB ( PIX *pixs, L_KERNEL *kel );
 extern PIX * pixConvolveRGBSep ( PIX *pixs, L_KERNEL *kelx, L_KERNEL *kely );
 extern FPIX * fpixConvolve ( FPIX *fpixs, L_KERNEL *kel, l_int32 normflag );
 extern FPIX * fpixConvolveSep ( FPIX *fpixs, L_KERNEL *kelx, L_KERNEL *kely, l_int32 normflag );
 extern PIX * pixConvolveWithBias ( PIX *pixs, L_KERNEL *kel1, L_KERNEL *kel2, l_int32 force8, l_int32 *pbias );
 extern void l_setConvolveSampling ( l_int32 xfact, l_int32 yfact );
 extern PIX * pixAddGaussianNoise ( PIX *pixs, l_float32 stdev );
 extern l_float32 gaussDistribSampling ( void );
 extern l_ok pixCorrelationScore ( PIX *pix1, PIX *pix2, l_int32 area1, l_int32 area2, l_float32 delx, l_float32 dely, l_int32 maxdiffw, l_int32 maxdiffh, l_int32 *tab, l_float32 *pscore );
 extern l_int32 pixCorrelationScoreThresholded ( PIX *pix1, PIX *pix2, l_int32 area1, l_int32 area2, l_float32 delx, l_float32 dely, l_int32 maxdiffw, l_int32 maxdiffh, l_int32 *tab, l_int32 *downcount, l_float32 score_threshold );
 extern l_ok pixCorrelationScoreSimple ( PIX *pix1, PIX *pix2, l_int32 area1, l_int32 area2, l_float32 delx, l_float32 dely, l_int32 maxdiffw, l_int32 maxdiffh, l_int32 *tab, l_float32 *pscore );
 extern l_ok pixCorrelationScoreShifted ( PIX *pix1, PIX *pix2, l_int32 area1, l_int32 area2, l_int32 delx, l_int32 dely, l_int32 *tab, l_float32 *pscore );
 extern L_DEWARP * dewarpCreate ( PIX *pixs, l_int32 pageno );
 extern L_DEWARP * dewarpCreateRef ( l_int32 pageno, l_int32 refpage );
 extern void dewarpDestroy ( L_DEWARP **pdew );
 extern L_DEWARPA * dewarpaCreate ( l_int32 nptrs, l_int32 sampling, l_int32 redfactor, l_int32 minlines, l_int32 maxdist );
 extern L_DEWARPA * dewarpaCreateFromPixacomp ( PIXAC *pixac, l_int32 useboth, l_int32 sampling, l_int32 minlines, l_int32 maxdist );
 extern void dewarpaDestroy ( L_DEWARPA **pdewa );
 extern l_ok dewarpaDestroyDewarp ( L_DEWARPA *dewa, l_int32 pageno );
 extern l_ok dewarpaInsertDewarp ( L_DEWARPA *dewa, L_DEWARP *dew );
 extern L_DEWARP * dewarpaGetDewarp ( L_DEWARPA *dewa, l_int32 index );
 extern l_ok dewarpaSetCurvatures ( L_DEWARPA *dewa, l_int32 max_linecurv, l_int32 min_diff_linecurv, l_int32 max_diff_linecurv, l_int32 max_edgecurv, l_int32 max_diff_edgecurv, l_int32 max_edgeslope );
 extern l_ok dewarpaUseBothArrays ( L_DEWARPA *dewa, l_int32 useboth );
 extern l_ok dewarpaSetCheckColumns ( L_DEWARPA *dewa, l_int32 check_columns );
 extern l_ok dewarpaSetMaxDistance ( L_DEWARPA *dewa, l_int32 maxdist );
 extern L_DEWARP * dewarpRead ( const char *filename );
 extern L_DEWARP * dewarpReadStream ( FILE *fp );
 extern L_DEWARP * dewarpReadMem ( const l_uint8 *data, size_t size );
 extern l_ok dewarpWrite ( const char *filename, L_DEWARP *dew );
 extern l_ok dewarpWriteStream ( FILE *fp, L_DEWARP *dew );
 extern l_ok dewarpWriteMem ( l_uint8 **pdata, size_t *psize, L_DEWARP *dew );
 extern L_DEWARPA * dewarpaRead ( const char *filename );
 extern L_DEWARPA * dewarpaReadStream ( FILE *fp );
 extern L_DEWARPA * dewarpaReadMem ( const l_uint8 *data, size_t size );
 extern l_ok dewarpaWrite ( const char *filename, L_DEWARPA *dewa );
 extern l_ok dewarpaWriteStream ( FILE *fp, L_DEWARPA *dewa );
 extern l_ok dewarpaWriteMem ( l_uint8 **pdata, size_t *psize, L_DEWARPA *dewa );
 extern l_ok dewarpBuildPageModel ( L_DEWARP *dew, const char *debugfile );
 extern l_ok dewarpFindVertDisparity ( L_DEWARP *dew, PTAA *ptaa, l_int32 rotflag );
 extern l_ok dewarpFindHorizDisparity ( L_DEWARP *dew, PTAA *ptaa );
 extern PTAA * dewarpGetTextlineCenters ( PIX *pixs, l_int32 debugflag );
 extern PTAA * dewarpRemoveShortLines ( PIX *pixs, PTAA *ptaas, l_float32 fract, l_int32 debugflag );
 extern l_ok dewarpFindHorizSlopeDisparity ( L_DEWARP *dew, PIX *pixb, l_float32 fractthresh, l_int32 parity );
 extern l_ok dewarpBuildLineModel ( L_DEWARP *dew, l_int32 opensize, const char *debugfile );
 extern l_ok dewarpaModelStatus ( L_DEWARPA *dewa, l_int32 pageno, l_int32 *pvsuccess, l_int32 *phsuccess );
 extern l_ok dewarpaApplyDisparity ( L_DEWARPA *dewa, l_int32 pageno, PIX *pixs, l_int32 grayin, l_int32 x, l_int32 y, PIX **ppixd, const char *debugfile );
 extern l_ok dewarpaApplyDisparityBoxa ( L_DEWARPA *dewa, l_int32 pageno, PIX *pixs, BOXA *boxas, l_int32 mapdir, l_int32 x, l_int32 y, BOXA **pboxad, const char *debugfile );
 extern l_ok dewarpMinimize ( L_DEWARP *dew );
 extern l_ok dewarpPopulateFullRes ( L_DEWARP *dew, PIX *pix, l_int32 x, l_int32 y );
 extern l_ok dewarpSinglePage ( PIX *pixs, l_int32 thresh, l_int32 adaptive, l_int32 useboth, l_int32 check_columns, PIX **ppixd, L_DEWARPA **pdewa, l_int32 debug );
 extern l_ok dewarpSinglePageInit ( PIX *pixs, l_int32 thresh, l_int32 adaptive, l_int32 useboth, l_int32 check_columns, PIX **ppixb, L_DEWARPA **pdewa );
 extern l_ok dewarpSinglePageRun ( PIX *pixs, PIX *pixb, L_DEWARPA *dewa, PIX **ppixd, l_int32 debug );
 extern l_ok dewarpaListPages ( L_DEWARPA *dewa );
 extern l_ok dewarpaSetValidModels ( L_DEWARPA *dewa, l_int32 notests, l_int32 debug );
 extern l_ok dewarpaInsertRefModels ( L_DEWARPA *dewa, l_int32 notests, l_int32 debug );
 extern l_ok dewarpaStripRefModels ( L_DEWARPA *dewa );
 extern l_ok dewarpaRestoreModels ( L_DEWARPA *dewa );
 extern l_ok dewarpaInfo ( FILE *fp, L_DEWARPA *dewa );
 extern l_ok dewarpaModelStats ( L_DEWARPA *dewa, l_int32 *pnnone, l_int32 *pnvsuccess, l_int32 *pnvvalid, l_int32 *pnhsuccess, l_int32 *pnhvalid, l_int32 *pnref );
 extern l_ok dewarpaShowArrays ( L_DEWARPA *dewa, l_float32 scalefact, l_int32 first, l_int32 last );
 extern l_ok dewarpDebug ( L_DEWARP *dew, const char *subdirs, l_int32 index );
 extern l_ok dewarpShowResults ( L_DEWARPA *dewa, SARRAY *sa, BOXA *boxa, l_int32 firstpage, l_int32 lastpage, const char *pdfout );
 extern L_DNA * l_dnaCreate ( l_int32 n );
 extern L_DNA * l_dnaCreateFromIArray ( l_int32 *iarray, l_int32 size );
 extern L_DNA * l_dnaCreateFromDArray ( l_float64 *darray, l_int32 size, l_int32 copyflag );
 extern L_DNA * l_dnaMakeSequence ( l_float64 startval, l_float64 increment, l_int32 size );
 extern void l_dnaDestroy ( L_DNA **pda );
 extern L_DNA * l_dnaCopy ( L_DNA *da );
 extern L_DNA * l_dnaClone ( L_DNA *da );
 extern l_ok l_dnaEmpty ( L_DNA *da );
 extern l_ok l_dnaAddNumber ( L_DNA *da, l_float64 val );
 extern l_ok l_dnaInsertNumber ( L_DNA *da, l_int32 index, l_float64 val );
 extern l_ok l_dnaRemoveNumber ( L_DNA *da, l_int32 index );
 extern l_ok l_dnaReplaceNumber ( L_DNA *da, l_int32 index, l_float64 val );
 extern l_int32 l_dnaGetCount ( L_DNA *da );
 extern l_ok l_dnaSetCount ( L_DNA *da, l_int32 newcount );