Packages_2024/leptonica_1.82.0/lept/allheaders.inc

function pixConnCompBB(pixs: PPIX; connectivity: Tl_int32): PBOXA; cdecl; external libleptb;
function pixCountConnComp(pixs: PPIX; connectivity: Tl_int32; pcount: Pl_int32): Tl_ok; cdecl; external libleptb;
function nextOnPixelInRaster(pixs: PPIX; xstart: Tl_int32; ystart: Tl_int32; px: Pl_int32; py: Pl_int32): Tl_int32; cdecl; external libleptb;
function pixSeedfillBB(pixs: PPIX; stack: PL_STACK; x: Tl_int32; y: Tl_int32; connectivity: Tl_int32): PBOX; cdecl; external libleptb;
function pixSeedfill4BB(pixs: PPIX; stack: PL_STACK; x: Tl_int32; y: Tl_int32): PBOX; cdecl; external libleptb;
function pixSeedfill8BB(pixs: PPIX; stack: PL_STACK; x: Tl_int32; y: Tl_int32): PBOX; cdecl; external libleptb;
function pixSeedfill(pixs: PPIX; stack: PL_STACK; x: Tl_int32; y: Tl_int32; connectivity: Tl_int32): Tl_ok; cdecl; external libleptb;
function pixSeedfill4(pixs: PPIX; stack: PL_STACK; x: Tl_int32; y: Tl_int32): Tl_ok; cdecl; external libleptb;
function pixSeedfill8(pixs: PPIX; stack: PL_STACK; x: Tl_int32; y: Tl_int32): Tl_ok; cdecl; external libleptb;
function convertFilesTo1bpp(dirin: pchar; substr: pchar; upscaling: Tl_int32; thresh: Tl_int32; firstpage: Tl_int32;
  npages: Tl_int32; dirout: pchar; outformat: Tl_int32): Tl_ok; cdecl; external libleptb;
function pixBlockconv(pix: PPIX; wc: Tl_int32; hc: Tl_int32): PPIX; cdecl; external libleptb;
function pixBlockconvGray(pixs: PPIX; pixacc: PPIX; wc: Tl_int32; hc: Tl_int32): PPIX; cdecl; external libleptb;
function pixBlockconvAccum(pixs: PPIX): PPIX; cdecl; external libleptb;
function pixBlockconvGrayUnnormalized(pixs: PPIX; wc: Tl_int32; hc: Tl_int32): PPIX; cdecl; external libleptb;
function pixBlockconvTiled(pix: PPIX; wc: Tl_int32; hc: Tl_int32; nx: Tl_int32; ny: Tl_int32): PPIX; cdecl; external libleptb;
function pixBlockconvGrayTile(pixs: PPIX; pixacc: PPIX; wc: Tl_int32; hc: Tl_int32): PPIX; cdecl; external libleptb;
function pixWindowedStats(pixs: PPIX; wc: Tl_int32; hc: Tl_int32; hasborder: Tl_int32; ppixm: PPPIX;
  ppixms: PPPIX; pfpixv: PPFPIX; pfpixrv: PPFPIX): Tl_ok; cdecl; external libleptb;
function pixWindowedMean(pixs: PPIX; wc: Tl_int32; hc: Tl_int32; hasborder: Tl_int32; normflag: Tl_int32): PPIX; cdecl; external libleptb;
function pixWindowedMeanSquare(pixs: PPIX; wc: Tl_int32; hc: Tl_int32; hasborder: Tl_int32): PPIX; cdecl; external libleptb;
function pixWindowedVariance(pixm: PPIX; pixms: PPIX; pfpixv: PPFPIX; pfpixrv: PPFPIX): Tl_ok; cdecl; external libleptb;
function pixMeanSquareAccum(pixs: PPIX): PDPIX; cdecl; external libleptb;
function pixBlockrank(pixs: PPIX; pixacc: PPIX; wc: Tl_int32; hc: Tl_int32; rank: Tl_float32): PPIX; cdecl; external libleptb;
function pixBlocksum(pixs: PPIX; pixacc: PPIX; wc: Tl_int32; hc: Tl_int32): PPIX; cdecl; external libleptb;
function pixCensusTransform(pixs: PPIX; halfsize: Tl_int32; pixacc: PPIX): PPIX; cdecl; external libleptb;
function pixConvolve(pixs: PPIX; kel: PL_KERNEL; outdepth: Tl_int32; normflag: Tl_int32): PPIX; cdecl; external libleptb;
function pixConvolveSep(pixs: PPIX; kelx: PL_KERNEL; kely: PL_KERNEL; outdepth: Tl_int32; normflag: Tl_int32): PPIX; cdecl; external libleptb;
function pixConvolveRGB(pixs: PPIX; kel: PL_KERNEL): PPIX; cdecl; external libleptb;
function pixConvolveRGBSep(pixs: PPIX; kelx: PL_KERNEL; kely: PL_KERNEL): PPIX; cdecl; external libleptb;
function fpixConvolve(fpixs: PFPIX; kel: PL_KERNEL; normflag: Tl_int32): PFPIX; cdecl; external libleptb;
function fpixConvolveSep(fpixs: PFPIX; kelx: PL_KERNEL; kely: PL_KERNEL; normflag: Tl_int32): PFPIX; cdecl; external libleptb;
function pixConvolveWithBias(pixs: PPIX; kel1: PL_KERNEL; kel2: PL_KERNEL; force8: Tl_int32; pbias: Pl_int32): PPIX; cdecl; external libleptb;
procedure l_setConvolveSampling(xfact: Tl_int32; yfact: Tl_int32); cdecl; external libleptb;
function pixAddGaussianNoise(pixs: PPIX; stdev: Tl_float32): PPIX; cdecl; external libleptb;
function gaussDistribSampling: Tl_float32; cdecl; external libleptb;
function pixCorrelationScore(pix1: PPIX; pix2: PPIX; area1: Tl_int32; area2: Tl_int32; delx: Tl_float32;
  dely: Tl_float32; maxdiffw: Tl_int32; maxdiffh: Tl_int32; tab: Pl_int32; pscore: Pl_float32): Tl_ok; cdecl; external libleptb;
function pixCorrelationScoreThresholded(pix1: PPIX; pix2: PPIX; area1: Tl_int32; area2: Tl_int32; delx: Tl_float32;
  dely: Tl_float32; maxdiffw: Tl_int32; maxdiffh: Tl_int32; tab: Pl_int32; downcount: Pl_int32;
  score_threshold: Tl_float32): Tl_int32; cdecl; external libleptb;
function pixCorrelationScoreSimple(pix1: PPIX; pix2: PPIX; area1: Tl_int32; area2: Tl_int32; delx: Tl_float32;
  dely: Tl_float32; maxdiffw: Tl_int32; maxdiffh: Tl_int32; tab: Pl_int32; pscore: Pl_float32): Tl_ok; cdecl; external libleptb;
function pixCorrelationScoreShifted(pix1: PPIX; pix2: PPIX; area1: Tl_int32; area2: Tl_int32; delx: Tl_int32;
  dely: Tl_int32; tab: Pl_int32; pscore: Pl_float32): Tl_ok; cdecl; external libleptb;
function dewarpCreate(pixs: PPIX; pageno: Tl_int32): PL_DEWARP; cdecl; external libleptb;
function dewarpCreateRef(pageno: Tl_int32; refpage: Tl_int32): PL_DEWARP; cdecl; external libleptb;
procedure dewarpDestroy(pdew: PPL_DEWARP); cdecl; external libleptb;
function dewarpaCreate(nptrs: Tl_int32; sampling: Tl_int32; redfactor: Tl_int32; minlines: Tl_int32; maxdist: Tl_int32): PL_DEWARPA; cdecl; external libleptb;
function dewarpaCreateFromPixacomp(pixac: PPIXAC; useboth: Tl_int32; sampling: Tl_int32; minlines: Tl_int32; maxdist: Tl_int32): PL_DEWARPA; cdecl; external libleptb;
procedure dewarpaDestroy(pdewa: PPL_DEWARPA); cdecl; external libleptb;
function dewarpaDestroyDewarp(dewa: PL_DEWARPA; pageno: Tl_int32): Tl_ok; cdecl; external libleptb;
function dewarpaInsertDewarp(dewa: PL_DEWARPA; dew: PL_DEWARP): Tl_ok; cdecl; external libleptb;
function dewarpaGetDewarp(dewa: PL_DEWARPA; index: Tl_int32): PL_DEWARP; cdecl; external libleptb;
function dewarpaSetCurvatures(dewa: PL_DEWARPA; max_linecurv: Tl_int32; min_diff_linecurv: Tl_int32; max_diff_linecurv: Tl_int32; max_edgecurv: Tl_int32;
  max_diff_edgecurv: Tl_int32; max_edgeslope: Tl_int32): Tl_ok; cdecl; external libleptb;
function dewarpaUseBothArrays(dewa: PL_DEWARPA; useboth: Tl_int32): Tl_ok; cdecl; external libleptb;
function dewarpaSetCheckColumns(dewa: PL_DEWARPA; check_columns: Tl_int32): Tl_ok; cdecl; external libleptb;
function dewarpaSetMaxDistance(dewa: PL_DEWARPA; maxdist: Tl_int32): Tl_ok; cdecl; external libleptb;
function dewarpRead(filename: pchar): PL_DEWARP; cdecl; external libleptb;
function dewarpReadStream(fp: PFILE): PL_DEWARP; cdecl; external libleptb;
function dewarpReadMem(data: Pl_uint8; size: Tsize_t): PL_DEWARP; cdecl; external libleptb;
function dewarpWrite(filename: pchar; dew: PL_DEWARP): Tl_ok; cdecl; external libleptb;
function dewarpWriteStream(fp: PFILE; dew: PL_DEWARP): Tl_ok; cdecl; external libleptb;
function dewarpWriteMem(pdata: PPl_uint8; psize: Psize_t; dew: PL_DEWARP): Tl_ok; cdecl; external libleptb;
function dewarpaRead(filename: pchar): PL_DEWARPA; cdecl; external libleptb;
function dewarpaReadStream(fp: PFILE): PL_DEWARPA; cdecl; external libleptb;
function dewarpaReadMem(data: Pl_uint8; size: Tsize_t): PL_DEWARPA; cdecl; external libleptb;
function dewarpaWrite(filename: pchar; dewa: PL_DEWARPA): Tl_ok; cdecl; external libleptb;
function dewarpaWriteStream(fp: PFILE; dewa: PL_DEWARPA): Tl_ok; cdecl; external libleptb;
function dewarpaWriteMem(pdata: PPl_uint8; psize: Psize_t; dewa: PL_DEWARPA): Tl_ok; cdecl; external libleptb;
function dewarpBuildPageModel(dew: PL_DEWARP; debugfile: pchar): Tl_ok; cdecl; external libleptb;
function dewarpFindVertDisparity(dew: PL_DEWARP; ptaa: PPTAA; rotflag: Tl_int32): Tl_ok; cdecl; external libleptb;
function dewarpFindHorizDisparity(dew: PL_DEWARP; ptaa: PPTAA): Tl_ok; cdecl; external libleptb;
function dewarpGetTextlineCenters(pixs: PPIX; debugflag: Tl_int32): PPTAA; cdecl; external libleptb;
function dewarpRemoveShortLines(pixs: PPIX; ptaas: PPTAA; fract: Tl_float32; debugflag: Tl_int32): PPTAA; cdecl; external libleptb;
function dewarpFindHorizSlopeDisparity(dew: PL_DEWARP; pixb: PPIX; fractthresh: Tl_float32; parity: Tl_int32): Tl_ok; cdecl; external libleptb;
function dewarpBuildLineModel(dew: PL_DEWARP; opensize: Tl_int32; debugfile: pchar): Tl_ok; cdecl; external libleptb;
function dewarpaModelStatus(dewa: PL_DEWARPA; pageno: Tl_int32; pvsuccess: Pl_int32; phsuccess: Pl_int32): Tl_ok; cdecl; external libleptb;
function dewarpaApplyDisparity(dewa: PL_DEWARPA; pageno: Tl_int32; pixs: PPIX; grayin: Tl_int32; x: Tl_int32;
  y: Tl_int32; ppixd: PPPIX; debugfile: pchar): Tl_ok; cdecl; external libleptb;
function dewarpaApplyDisparityBoxa(dewa: PL_DEWARPA; pageno: Tl_int32; pixs: PPIX; boxas: PBOXA; mapdir: Tl_int32;
  x: Tl_int32; y: Tl_int32; pboxad: PPBOXA; debugfile: pchar): Tl_ok; cdecl; external libleptb;
function dewarpMinimize(dew: PL_DEWARP): Tl_ok; cdecl; external libleptb;
function dewarpPopulateFullRes(dew: PL_DEWARP; pix: PPIX; x: Tl_int32; y: Tl_int32): Tl_ok; cdecl; external libleptb;
function dewarpSinglePage(pixs: PPIX; thresh: Tl_int32; adaptive: Tl_int32; useboth: Tl_int32; check_columns: Tl_int32;
  ppixd: PPPIX; pdewa: PPL_DEWARPA; debug: Tl_int32): Tl_ok; cdecl; external libleptb;
function dewarpSinglePageInit(pixs: PPIX; thresh: Tl_int32; adaptive: Tl_int32; useboth: Tl_int32; check_columns: Tl_int32;
  ppixb: PPPIX; pdewa: PPL_DEWARPA): Tl_ok; cdecl; external libleptb;
function dewarpSinglePageRun(pixs: PPIX; pixb: PPIX; dewa: PL_DEWARPA; ppixd: PPPIX; debug: Tl_int32): Tl_ok; cdecl; external libleptb;
function dewarpaListPages(dewa: PL_DEWARPA): Tl_ok; cdecl; external libleptb;
function dewarpaSetValidModels(dewa: PL_DEWARPA; notests: Tl_int32; debug: Tl_int32): Tl_ok; cdecl; external libleptb;
function dewarpaInsertRefModels(dewa: PL_DEWARPA; notests: Tl_int32; debug: Tl_int32): Tl_ok; cdecl; external libleptb;
function dewarpaStripRefModels(dewa: PL_DEWARPA): Tl_ok; cdecl; external libleptb;
function dewarpaRestoreModels(dewa: PL_DEWARPA): Tl_ok; cdecl; external libleptb;
function dewarpaInfo(fp: PFILE; dewa: PL_DEWARPA): Tl_ok; cdecl; external libleptb;
function dewarpaModelStats(dewa: PL_DEWARPA; pnnone: Pl_int32; pnvsuccess: Pl_int32; pnvvalid: Pl_int32; pnhsuccess: Pl_int32;
  pnhvalid: Pl_int32; pnref: Pl_int32): Tl_ok; cdecl; external libleptb;
function dewarpaShowArrays(dewa: PL_DEWARPA; scalefact: Tl_float32; first: Tl_int32; last: Tl_int32): Tl_ok; cdecl; external libleptb;
function dewarpDebug(dew: PL_DEWARP; subdirs: pchar; index: Tl_int32): Tl_ok; cdecl; external libleptb;
function dewarpShowResults(dewa: PL_DEWARPA; sa: PSARRAY; boxa: PBOXA; firstpage: Tl_int32; lastpage: Tl_int32;
  pdfout: pchar): Tl_ok; cdecl; external libleptb;
function l_dnaCreate(n: Tl_int32): PL_DNA; cdecl; external libleptb;
function l_dnaCreateFromIArray(iarray: Pl_int32; size: Tl_int32): PL_DNA; cdecl; external libleptb;
function l_dnaCreateFromDArray(darray: Pl_float64; size: Tl_int32; copyflag: Tl_int32): PL_DNA; cdecl; external libleptb;
function l_dnaMakeSequence(startval: Tl_float64; increment: Tl_float64; size: Tl_int32): PL_DNA; cdecl; external libleptb;
procedure l_dnaDestroy(pda: PPL_DNA); cdecl; external libleptb;
function l_dnaCopy(da: PL_DNA): PL_DNA; cdecl; external libleptb;
function l_dnaClone(da: PL_DNA): PL_DNA; cdecl; external libleptb;
function l_dnaEmpty(da: PL_DNA): Tl_ok; cdecl; external libleptb;
function l_dnaAddNumber(da: PL_DNA; val: Tl_float64): Tl_ok; cdecl; external libleptb;
function l_dnaInsertNumber(da: PL_DNA; index: Tl_int32; val: Tl_float64): Tl_ok; cdecl; external libleptb;
function l_dnaRemoveNumber(da: PL_DNA; index: Tl_int32): Tl_ok; cdecl; external libleptb;
function l_dnaReplaceNumber(da: PL_DNA; index: Tl_int32; val: Tl_float64): Tl_ok; cdecl; external libleptb;
function l_dnaGetCount(da: PL_DNA): Tl_int32; cdecl; external libleptb;
function l_dnaSetCount(da: PL_DNA; newcount: Tl_int32): Tl_ok; cdecl; external libleptb;
